<resources>
    <string name="app_name">MyTweet</string>

    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear</string>
    <string name="new_tweet">New Tweet</string>

    <string name="button_tweet">Tweet</string>
    <string name="sent_date">""</string>
    <string name="hint_status">What\'s in your mind?</string>
    <string name="action_select">Select Contact</string>
    <string name="action_email">Email Tweet via</string>
    <string name="timeline_activity">Timeline</string>
    <string name="mytweet_activity">My Tweet</string>
    <string name="delete_message">Delete Message</string>
    <string name="tweet_report_subject">My Latest Tweet! </string>
    </resources>
