<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".mytweetActivity">

    <Button
        android:id="@+id/buttonTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="17dp"
        android:text="@string/button_tweet" />

    <EditText
        android:id="@+id/editStatus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:hint="@string/hint_status"
        android:inputType="textMultiLine"
        android:layout_above="@+id/selectContact"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/selectContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_select"
        android:layout_above="@+id/sendEmail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/sendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_email"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="63dp" />

</RelativeLayout>
